cluster/apps/media/sabnzbd/backend-traffic-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: sabnzbd
  namespace: media
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: sabnzbd
  useClientProtocol: true
  timeout:
    http:
      requestTimeout: 300s
  requestBuffer:
    limit: 100Mi
